@@ -593,8 +593,6 @@ hildon_program_get_can_hibernate                (HildonProgram *self)
  *
  * This method does not support #HildonAppMenu<!-- -->s. See
  * hildon_program_set_common_app_menu() for that.
- *
- * Since: 2.2
  **/
 void
 hildon_program_set_common_menu                  (HildonProgram *self, 
