@@ -1,3 +1,14 @@
+2009-09-03  Alberto Garcia  <agarcia@igalia.com>
+
+	* doc/hildon-sections.txt
+	* hildon/hildon-button.c
+	* hildon/hildon-edit-toolbar.c
+	* hildon/hildon-gtk.[ch]
+	* hildon/hildon-main.c
+	* hildon/hildon-program.c
+	* hildon/hildon-stackable-window.c:
+	Documentation updates
+
 2009-08-28  Alberto Garcia  <agarcia@igalia.com>
 
 	* hildon/hildon-app-menu.c
